--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
   <div id="container">
     <img id="background-image" src="./Group 1184.png" alt="Background Image">
-    <h1 id="text1">Design Portfolio</h1>
-    <h1 id="text2">Kriti Suri</h1>
+    <h1 id="text1">Hello there!</h1>
+    <h1 id="text2">I'm Kriti Suri</h1>
     <h1 id="text3">Based in Mumbai & Chennai</h1>
     <img id="image1" src="./Group 1190.png" alt="Image 1" width="1200" height="800">
     <img id="image2" src="./Ellipse 1 (1).png" alt="Image 2" width="800" height="800">
