--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <div id="container">
     <img id="background-image" src="./Group 1184.png" alt="Background Image">
-    <h1 id="text1">Hello there!</h1>
+    <h1 id="text1">Hey there!</h1>
     <h1 id="text2">I'm Kriti Suri</h1>
     <h1 id="text3">Based in Mumbai & Chennai</h1>
     <img id="image1" src="./Group 1190.png" alt="Image 1" width="1200" height="800">
