--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <img id="background-image" src="./Group 1184.png" alt="Background Image">
     <h1 id="text1">Hey there!</h1>
     <h1 id="text2">I'm Kriti Suri</h1>
-    <p id="text3">Based in Mumbai & Chennai</p>
+    <h1 id="text3">Based in Mumbai & Chennai</h1>
     <img id="image1" src="./Group 1190.png" alt="Image 1" width="1200" height="800">
     <img id="image2" src="./Ellipse 1 (1).png" alt="Image 2" width="800" height="800">
     <a href="https://www.linkedin.com/in/kriti-suri0810/"><img id="image3" src="./Group 3437.png" alt="LinkedIn" width="165" height="75"></a>
