--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <div id="container">
     <img id="background-image" src="./Group 1184.png" alt="Background Image">
     <h1 id="text1">Hey there!</h1>
-    <h1 id="text2">I'm Kriti Suri</h1>
+    <h1 id="text2">I'm <span class="auto-type"></span></h1>
     <h1 id="text3">Based in Mumbai & Chennai</h1>
     <img id="image1" src="./Group 1190.png" alt="Image 1" width="1200" height="800">
     <img id="image2" src="./Ellipse 1 (1).png" alt="Image 2" width="800" height="800">
@@ -24,7 +24,16 @@
     <img id="image-8" src="./text-1685178530963.png">
     <img id="image-9" src="./Frame 3542.png">
   </div>
-
+  <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
   <script src="script.js"></script>
+  <script>
+    var typed = new Typed(".auto-type", {
+      strings:["Kriti Suri"],
+      typeSpeed: 150,
+      backSpeed: 150,
+      loop: true
+    })
+  </script>
+  
 </body>
 </html>
