--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img id="image1" src="./Group 1190.png" alt="Image 1" width="1200" height="800">
     <img id="image2" src="./Ellipse 1 (1).png" alt="Image 2" width="800" height="800">
     <a href="https://www.linkedin.com/in/kriti-suri0810/"><img id="image3" src="./Group 3437.png" alt="LinkedIn" width="165" height="75"></a>
-    <a href="https://linktr.ee/kriti_suri"><img id="image4" src="./Group 3438.png" alt="Linktree" width="165" height="75"></a>
+    <a href="https://linktr.ee/kriti_suri"><button type="button" class="btn primary shinny">EXPLORE</button></a>
     <img id="image5" src="./Frame 3540.png" alt="Scroll" width="132" height="40">
     <img id="image6" src="./Frame 2 (1).png" alt="Image 6">
     <img id="image7" src="./Frame 3541.png" alt="Scroll" width="132" height="40">
