--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img id="image1" src="./Group 1190.png" alt="Image 1" width="1200" height="800">
     <img id="image2" src="./Ellipse 1 (1).png" alt="Image 2" width="800" height="800">
     <a href="https://www.linkedin.com/in/kriti-suri0810/"><img id="image3" src="./Group 3437.png" alt="LinkedIn" width="165" height="75"></a>
-    <button class="btn" herf="https://linktr.ee/kriti_suri">EXPLORE</button>
+    <button class="btn"><a herf="https://linktr.ee/kriti_suri">EXPLORE</a></button>
     <img id="image5" src="./Frame 3540.png" alt="Scroll" width="132" height="40">
     <img id="image6" src="./Frame 2 (1).png" alt="Image 6">
     <img id="image7" src="./Frame 3541.png" alt="Scroll" width="132" height="40">
