--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <img id="image-8" src="./text-1685178530963.png">
     <img id="image-9" src="./Frame 3542.png">
     <div class="vertical-center">
-    <a href="https://linktr.ee/kriti_suri" class="brk-btn" 
+    <a href="https://linktr.ee/kriti_suri" class="brk-btn" >
   EXPLORE
     </a>
     </div>
