--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
     <img src="./Frame 1 (4).png" id="scroll-link3">
     <img id="image-8" src="./text-1685178530963.png">
     <img id="image-9" src="./Frame 3542.png">
-    <a href="https://linktr.ee/kriti_suri" class="brk-btn" ><span class="vertical-center">
-      EXPLORE </span>
-    </a>
+    <span class="vertical-center"><a href="https://linktr.ee/kriti_suri" class="brk-btn" >
+      EXPLORE </a></span>
     </div>
   <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
   <script src="script.js"></script>
