--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <img id="image-9" src="./Frame 3542.png">
     <span class="vertical-center"><a href="https://linktr.ee/kriti_suri" class="brk-btn" >
       EXPLORE </a></span>
+    <button><a herf="https://linktr.ee/kriti_suri">EXPLORE</a></button>
     </div>
   <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
   <script src="script.js"></script>
